--- a/styleinicio.css
+++ b/styleinicio.css
@@ -52,6 +52,7 @@ body {
     transition: transform 0.3s ease;
 }
 
+
 #usuario:hover {
     transform: translateY(-5px);
 }
@@ -72,10 +73,9 @@ body {
     font-size: 2em;
     color: #000000;
     display: flex;
-    justify-content:left ;
+    justify-content:center ;
     padding-top: 100px;
     margin-top: 150px;
-    margin-left:200px ;
     padding: 4px 16px;
     text-align: start;
     
@@ -105,9 +105,14 @@ body {
     margin-top: 10px;
     
 }
+.none {
+    border: none ;
 
+}
 
 #funçao1, #funçao2, #funçao3, #funçao4 {
+    display: flex;
+    justify-content: center;
     width: 300px;
     height: 180px;
     border-radius: 20px;
@@ -116,6 +121,8 @@ body {
     transition: background-color 0.3s ease, transform 0.3s ease;
     justify-content: space-between;
     margin: 10px; /* Reduz a margem para diminuir a distância */
+    cursor: pointer;
+    
 }
 
 #funçao1:hover, #funçao2:hover, #funçao3:hover, #funçao4:hover {
