--- a/styleinicio.css
+++ b/styleinicio.css
@@ -45,6 +45,7 @@ body {
 #usuario {
     margin: 20px auto;
     height: 600px;
+    width: 600px;
     max-width: 90%;
     border-radius: 30px;
     background-color: #1AB3B8;
@@ -80,29 +81,16 @@ body {
     text-align: start;
     
 }
-#conteudo2 {
-    border: solid #8bf0f0 4px ;
-    margin-top: 150px;
-    background-color: #8bf0f0;
-    padding-top: 200px;
 
 
 
-}
-
-#conteudo3 {
-    border: solid #E8EFF2 4px ;
-    margin-top: 300px;
-    background-color: #E8EFF2;
-    padding-top: 300px;
-}
 
 /* Funções */
 #funçao {
     display: flex;
     justify-content: center; /* Centraliza os elementos horizontalmente */
     flex-wrap: wrap;
-    margin-top: 10px;
+    margin-top: 0px;
     
 }
 .none {
